--- a/aturserviceweb/src/components/joblocation/joblocation.css
+++ b/aturserviceweb/src/components/joblocation/joblocation.css
@@ -12,6 +12,7 @@
   }
   
   @media only screen and (min-width: 440px)  {
+
     .flexItem {
       width: 50%;
       height: 50px;
@@ -22,6 +23,9 @@
   }
   
   @media only screen and (max-width: 440px) {
+    label.flexItem {
+      display: none;
+    }
     .flexItem {
       width: 100%;
       height: 50px;
