Add Job listing view for both professional and consumer on top right button click.

--- a/aturserviceweb/src/components/jobslist/jobslist.css
+++ b/aturserviceweb/src/components/jobslist/jobslist.css
@@ -13,15 +13,15 @@
   }
 
   .namecell{
-      width: 100px;
+      width: 50%;
       text-align: left;
   }
   .textcell{
-    width: 100px;
+    width: 100%;
     text-align: left;
 }
 
 .datecell{
-    width: 100px;
+    width: 50%;
     text-align: left;
 }
