Added jobs db and to show notifications and Jobs status change.

--- a/aturserviceweb/src/components/main/Main.css
+++ b/aturserviceweb/src/components/main/Main.css
@@ -37,6 +37,11 @@ body > .el-container {
 }
 
 @media only screen and (max-width: 768px) {
+
+  .apptitle {
+    font: bold 30px arial, sans-serif;
+  }
+
   .welMsg1 {
     font: bold 21px  arial, sans-serif;
   }
